fix: Align cart.jsx buttons3

--- a/public/assets/sass/sections/ShopCheckout/_cart.scss
+++ b/public/assets/sass/sections/ShopCheckout/_cart.scss
@@ -25,7 +25,7 @@
       width: 100%;
       height: 3.75rem;
       font-size: 0.875rem;
-      margin: 3% 10% 3% 0 ;
+      margin: 3% 0 3% 0 ;
       // border-radius: 10px;
       background-color: black;
       border:none;
